correccion Stream.toList() java 8